--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,27 @@
 @font-face {
-  font-family: "Roboto_slab";
-  src: local("Roboto_slab"),
-    url(./fonts/Roboto_slab/RobotoSlab-Regular.ttf) format("truetype");
+  font-family: 'Roboto_slab';
+  src: local('Roboto_slab'),
+    url(./fonts/Roboto_slab/RobotoSlab-Regular.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: "Gilda_display";
-  src: local("Gilda_display"),
-    url(./fonts/Gilda_display/GildaDisplay-Regular.ttf) format("truetype");
+  font-family: 'Gilda_display';
+  src: local('Gilda_display'),
+    url(./fonts/Gilda_display/GildaDisplay-Regular.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: "Roboto_slab";
+  font-family: 'Roboto_slab';
   font-weight: 900;
-  src: local("Roboto_slab"),
-    url(./fonts/Roboto_slab/RobotoSlab-Bold.ttf) format("truetype");
+  src: local('Roboto_slab'),
+    url(./fonts/Roboto_slab/RobotoSlab-Bold.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: "Roboto_slab";
+  font-family: 'Roboto_slab';
   font-weight: 900;
-  src: local("Roboto_slab"),
-    url(./fonts/Roboto_slab/RobotoSlab-Black.ttf) format("truetype");
+  src: local('Roboto_slab'),
+    url(./fonts/Roboto_slab/RobotoSlab-Black.ttf) format('truetype');
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -40,13 +40,13 @@
 }
 
 .name {
-  font-family: Roboto_slab, "Times New Roman", Times, serif;
+  font-family: Roboto_slab, 'Times New Roman', Times, serif;
   font-weight: 500;
   font-size: larger;
 }
 
 .head {
-  font-family: Roboto_slab, "Times New Roman", Times, serif;
+  font-family: Roboto_slab, 'Times New Roman', Times, serif;
 }
 
 .nav {
@@ -72,4 +72,15 @@
   transform: translate(-50%, -50%);
   pointer-events: none;
   mix-blend-mode: difference;
+}
+.content {
+  text-align: left;
+  font-size: 18px;
+}
+
+.MySkillImage {
+  display: flex;
+}
+.poto {
+  display: flex;
 }
